# price-alert-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
.agents/skills/price-alert-skill/: .env.example  .gitignore  CONTEXT.md  PLANO.md  SKILL.md  ensure_sender.sh  requirements.txt  run_hourly.ps1  run_hourly.sh  run_scan.ps1  run_scan.sh  run_sender.ps1  run_sender.sh  setup_ubuntu.sh  stop_sender.ps1  stop_sender.sh
.agents/skills/price-alert-skill/core/: __init__.py
price_alert_skill/: __init__.py  config.py  deal_queue.py  deal_selection.py  dispatch_pending_deals.py  fetch_amazon_br.py  fetch_mercadolivre_br.py  fetch_ml_browser.py  generate_melila_links.py  ml_login.py  paths.py  runtime.py  scan_deals.py  scrape_server.py  send_to_whatsapp.py  sender_worker.py  utils.py
price_alert_skill/core/adapters/: amazon_scanner.py  json_queue_repository.py  json_sent_deals_repository.py  meli_affiliate_links.py  mercadolivre_scanner.py  whatsapp_sender.py
price_alert_skill/core/application/: scan_use_case.py  sender_use_case.py
price_alert_skill/core/domain/: __init__.py  dedup_policy.py  lane_rules.py  queue_policy.py  ranking.py
price_alert_skill/core/entrypoints/: __init__.py  dispatch_cli.py  sender_cli.py
price_alert_skill/core/ports/: scanner.py
references/: output-schema.md  run-config.example.json  storage-layout.md
scripts/: create_shopee_session.py  enrich_with_zoom.py  fetch_amazon_br.py  fetch_mercadolivre_br.py  monitor_query.py  refresh_watchlist_messages.py  report_price_history.py  run_all_monitors.py  scrape_server.py  update_watchlist.py
(+70 files in other folders)
