[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "price-alert-skill"
version = "0.1.0"
description = "Marketplace deal scanning and WhatsApp delivery package used by the price-alert skill."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests",
  "playwright",
  "fastapi",
  "uvicorn",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["price_alert_skill*"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
